# ECE420

./: .~lock.paper list.odt#  README.md  dsp_method.py  paper list.odt
.ipynb_checkpoints/: lab7-checkpoint.ipynb
lab1/: Hanfei_Geng.py  jiwfuew.py  peak_detection.py  sample_sensor_data.csv
lab1/lab1/app/: build.gradle  proguard-rules.pro
lab1/lab1/gradle/wrapper/: gradle-wrapper.properties
lab2/: Prelab2.ipynb  Prelab2.py  filter_generation.py  filter_generation_and_test.py  filter_test.py  fircoeffcients.csv  iir_filter_testing.py
lab2/lab2/: test.py
lab2/lab2/app/: build.gradle
lab3/: lab3_student.py  prelab3.ipynb
lab3/.ipynb_checkpoints/: prelab3-checkpoint.ipynb
lab3/lab3/lab3/app/: build.gradle
lab4/: lab4_student.py  prelab4.ipynb
lab4/.ipynb_checkpoints/: prelab4-checkpoint.ipynb
lab4/lab4/app/: build.gradle
lab4/lab4/gradle/wrapper/: gradle-wrapper.properties
lab5/: lab5.ipynb  lab5.py  prelab5.ipynb  test_vector_all_voiced_epochs.npy
lab5/.ipynb_checkpoints/: lab5-checkpoint.ipynb  prelab5-checkpoint.ipynb
lab5/lab5/: .gitignore
lab5/lab5/app/: build.gradle
lab5/lab5/app/src/main/cpp/: CMakeLists.txt  audio_main.cpp  audio_recorder.cpp  ece420_lib.h  ece420_main.cpp  ece420_main.h
lab5/lab5/gradle/wrapper/: gradle-wrapper.properties
lab6/: prelab6.ipynb
lab6/.ipynb_checkpoints/: prelab6-checkpoint.ipynb
lab6/lab6_student/app/: build.gradle  proguard-rules.pro
lab6/student/: eco.tif  lab6Conv2.py  lab6Histeq.py
lab7/: Prelab7.ipynb
lab7/.ipynb_checkpoints/: lab7-checkpoint.ipynb
lab7/lab7/app/: build.gradle
(+63 files in other folders)
